// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollSnapPaddingBlockStart renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-block-start: 0;
  -moz-scroll-snap-padding-block-start: 0;
  -ms-scroll-snap-padding-block-start: 0;
  scroll-snap-padding-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: 0;
  -moz-scroll-snap-padding-block-start: 0;
  -ms-scroll-snap-padding-block-start: 0;
  scroll-snap-padding-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: 0;
  -moz-scroll-snap-padding-block-start: 0;
  -ms-scroll-snap-padding-block-start: 0;
  scroll-snap-padding-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: 0;
  -moz-scroll-snap-padding-block-start: 0;
  -ms-scroll-snap-padding-block-start: 0;
  scroll-snap-padding-block-start: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingBlockStart renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-block-start: hasnot;
  -moz-scroll-snap-padding-block-start: hasnot;
  -ms-scroll-snap-padding-block-start: hasnot;
  scroll-snap-padding-block-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: has;
  -moz-scroll-snap-padding-block-start: has;
  -ms-scroll-snap-padding-block-start: has;
  scroll-snap-padding-block-start: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: hasnot;
  -moz-scroll-snap-padding-block-start: hasnot;
  -ms-scroll-snap-padding-block-start: hasnot;
  scroll-snap-padding-block-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: has;
  -moz-scroll-snap-padding-block-start: has;
  -ms-scroll-snap-padding-block-start: has;
  scroll-snap-padding-block-start: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingBlockStart renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-block-start: invalid.path.1;
  -moz-scroll-snap-padding-block-start: invalid.path.1;
  -ms-scroll-snap-padding-block-start: invalid.path.1;
  scroll-snap-padding-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: invalid.path.1;
  -moz-scroll-snap-padding-block-start: invalid.path.1;
  -ms-scroll-snap-padding-block-start: invalid.path.1;
  scroll-snap-padding-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: invalid.path.1;
  -moz-scroll-snap-padding-block-start: invalid.path.1;
  -ms-scroll-snap-padding-block-start: invalid.path.1;
  scroll-snap-padding-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: invalid.path.1;
  -moz-scroll-snap-padding-block-start: invalid.path.1;
  -ms-scroll-snap-padding-block-start: invalid.path.1;
  scroll-snap-padding-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingBlockStart renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-block-start: -54881;
  -moz-scroll-snap-padding-block-start: -54881;
  -ms-scroll-snap-padding-block-start: -54881;
  scroll-snap-padding-block-start: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: -54881;
  -moz-scroll-snap-padding-block-start: -54881;
  -ms-scroll-snap-padding-block-start: -54881;
  scroll-snap-padding-block-start: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: -42365;
  -moz-scroll-snap-padding-block-start: -42365;
  -ms-scroll-snap-padding-block-start: -42365;
  scroll-snap-padding-block-start: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: -42365;
  -moz-scroll-snap-padding-block-start: -42365;
  -ms-scroll-snap-padding-block-start: -42365;
  scroll-snap-padding-block-start: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingBlockStart renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-block-start: July;
  -moz-scroll-snap-padding-block-start: July;
  -ms-scroll-snap-padding-block-start: July;
  scroll-snap-padding-block-start: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: August;
    -moz-scroll-snap-padding-block-start: August;
    -ms-scroll-snap-padding-block-start: August;
    scroll-snap-padding-block-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: September;
    -moz-scroll-snap-padding-block-start: September;
    -ms-scroll-snap-padding-block-start: September;
    scroll-snap-padding-block-start: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: November;
    -moz-scroll-snap-padding-block-start: November;
    -ms-scroll-snap-padding-block-start: November;
    scroll-snap-padding-block-start: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: August;
    -moz-scroll-snap-padding-block-start: August;
    -ms-scroll-snap-padding-block-start: August;
    scroll-snap-padding-block-start: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: July;
  -moz-scroll-snap-padding-block-start: July;
  -ms-scroll-snap-padding-block-start: July;
  scroll-snap-padding-block-start: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: August;
    -moz-scroll-snap-padding-block-start: August;
    -ms-scroll-snap-padding-block-start: August;
    scroll-snap-padding-block-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: September;
    -moz-scroll-snap-padding-block-start: September;
    -ms-scroll-snap-padding-block-start: September;
    scroll-snap-padding-block-start: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: November;
    -moz-scroll-snap-padding-block-start: November;
    -ms-scroll-snap-padding-block-start: November;
    scroll-snap-padding-block-start: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: August;
    -moz-scroll-snap-padding-block-start: August;
    -ms-scroll-snap-padding-block-start: August;
    scroll-snap-padding-block-start: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: January;
  -moz-scroll-snap-padding-block-start: January;
  -ms-scroll-snap-padding-block-start: January;
  scroll-snap-padding-block-start: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: December;
    -moz-scroll-snap-padding-block-start: December;
    -ms-scroll-snap-padding-block-start: December;
    scroll-snap-padding-block-start: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: April;
    -moz-scroll-snap-padding-block-start: April;
    -ms-scroll-snap-padding-block-start: April;
    scroll-snap-padding-block-start: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: May;
    -moz-scroll-snap-padding-block-start: May;
    -ms-scroll-snap-padding-block-start: May;
    scroll-snap-padding-block-start: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: June;
    -moz-scroll-snap-padding-block-start: June;
    -ms-scroll-snap-padding-block-start: June;
    scroll-snap-padding-block-start: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: January;
  -moz-scroll-snap-padding-block-start: January;
  -ms-scroll-snap-padding-block-start: January;
  scroll-snap-padding-block-start: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: December;
    -moz-scroll-snap-padding-block-start: December;
    -ms-scroll-snap-padding-block-start: December;
    scroll-snap-padding-block-start: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: April;
    -moz-scroll-snap-padding-block-start: April;
    -ms-scroll-snap-padding-block-start: April;
    scroll-snap-padding-block-start: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: May;
    -moz-scroll-snap-padding-block-start: May;
    -ms-scroll-snap-padding-block-start: May;
    scroll-snap-padding-block-start: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: June;
    -moz-scroll-snap-padding-block-start: June;
    -ms-scroll-snap-padding-block-start: June;
    scroll-snap-padding-block-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingBlockStart renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: July;
    -moz-scroll-snap-padding-block-start: July;
    -ms-scroll-snap-padding-block-start: July;
    scroll-snap-padding-block-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: August;
    -moz-scroll-snap-padding-block-start: August;
    -ms-scroll-snap-padding-block-start: August;
    scroll-snap-padding-block-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: September;
    -moz-scroll-snap-padding-block-start: September;
    -ms-scroll-snap-padding-block-start: September;
    scroll-snap-padding-block-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: November;
    -moz-scroll-snap-padding-block-start: November;
    -ms-scroll-snap-padding-block-start: November;
    scroll-snap-padding-block-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: July;
    -moz-scroll-snap-padding-block-start: July;
    -ms-scroll-snap-padding-block-start: July;
    scroll-snap-padding-block-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: August;
    -moz-scroll-snap-padding-block-start: August;
    -ms-scroll-snap-padding-block-start: August;
    scroll-snap-padding-block-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: September;
    -moz-scroll-snap-padding-block-start: September;
    -ms-scroll-snap-padding-block-start: September;
    scroll-snap-padding-block-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: November;
    -moz-scroll-snap-padding-block-start: November;
    -ms-scroll-snap-padding-block-start: November;
    scroll-snap-padding-block-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: May;
    -moz-scroll-snap-padding-block-start: May;
    -ms-scroll-snap-padding-block-start: May;
    scroll-snap-padding-block-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: June;
    -moz-scroll-snap-padding-block-start: June;
    -ms-scroll-snap-padding-block-start: June;
    scroll-snap-padding-block-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: April;
    -moz-scroll-snap-padding-block-start: April;
    -ms-scroll-snap-padding-block-start: April;
    scroll-snap-padding-block-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: November;
    -moz-scroll-snap-padding-block-start: November;
    -ms-scroll-snap-padding-block-start: November;
    scroll-snap-padding-block-start: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: May;
    -moz-scroll-snap-padding-block-start: May;
    -ms-scroll-snap-padding-block-start: May;
    scroll-snap-padding-block-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: June;
    -moz-scroll-snap-padding-block-start: June;
    -ms-scroll-snap-padding-block-start: June;
    scroll-snap-padding-block-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: April;
    -moz-scroll-snap-padding-block-start: April;
    -ms-scroll-snap-padding-block-start: April;
    scroll-snap-padding-block-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-block-start: November;
    -moz-scroll-snap-padding-block-start: November;
    -ms-scroll-snap-padding-block-start: November;
    scroll-snap-padding-block-start: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingBlockStart renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-block-start: July;
  -moz-scroll-snap-padding-block-start: July;
  -ms-scroll-snap-padding-block-start: July;
  scroll-snap-padding-block-start: July;
}

@media May {
  .c0 {
    -webkit-scroll-snap-padding-block-start: August;
    -moz-scroll-snap-padding-block-start: August;
    -ms-scroll-snap-padding-block-start: August;
    scroll-snap-padding-block-start: August;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-block-start: September;
    -moz-scroll-snap-padding-block-start: September;
    -ms-scroll-snap-padding-block-start: September;
    scroll-snap-padding-block-start: September;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-block-start: November;
    -moz-scroll-snap-padding-block-start: November;
    -ms-scroll-snap-padding-block-start: November;
    scroll-snap-padding-block-start: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-block-start: August;
    -moz-scroll-snap-padding-block-start: August;
    -ms-scroll-snap-padding-block-start: August;
    scroll-snap-padding-block-start: August;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-block-start: November;
    -moz-scroll-snap-padding-block-start: November;
    -ms-scroll-snap-padding-block-start: November;
    scroll-snap-padding-block-start: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: July;
  -moz-scroll-snap-padding-block-start: July;
  -ms-scroll-snap-padding-block-start: July;
  scroll-snap-padding-block-start: July;
}

@media May {
  .c0 {
    -webkit-scroll-snap-padding-block-start: August;
    -moz-scroll-snap-padding-block-start: August;
    -ms-scroll-snap-padding-block-start: August;
    scroll-snap-padding-block-start: August;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-block-start: September;
    -moz-scroll-snap-padding-block-start: September;
    -ms-scroll-snap-padding-block-start: September;
    scroll-snap-padding-block-start: September;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-block-start: November;
    -moz-scroll-snap-padding-block-start: November;
    -ms-scroll-snap-padding-block-start: November;
    scroll-snap-padding-block-start: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-block-start: August;
    -moz-scroll-snap-padding-block-start: August;
    -ms-scroll-snap-padding-block-start: August;
    scroll-snap-padding-block-start: August;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-block-start: November;
    -moz-scroll-snap-padding-block-start: November;
    -ms-scroll-snap-padding-block-start: November;
    scroll-snap-padding-block-start: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: April;
  -moz-scroll-snap-padding-block-start: April;
  -ms-scroll-snap-padding-block-start: April;
  scroll-snap-padding-block-start: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-padding-block-start: November;
    -moz-scroll-snap-padding-block-start: November;
    -ms-scroll-snap-padding-block-start: November;
    scroll-snap-padding-block-start: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-block-start: January;
    -moz-scroll-snap-padding-block-start: January;
    -ms-scroll-snap-padding-block-start: January;
    scroll-snap-padding-block-start: January;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-block-start: December;
    -moz-scroll-snap-padding-block-start: December;
    -ms-scroll-snap-padding-block-start: December;
    scroll-snap-padding-block-start: December;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-block-start: April;
    -moz-scroll-snap-padding-block-start: April;
    -ms-scroll-snap-padding-block-start: April;
    scroll-snap-padding-block-start: April;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-block-start: May;
    -moz-scroll-snap-padding-block-start: May;
    -ms-scroll-snap-padding-block-start: May;
    scroll-snap-padding-block-start: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: April;
  -moz-scroll-snap-padding-block-start: April;
  -ms-scroll-snap-padding-block-start: April;
  scroll-snap-padding-block-start: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-padding-block-start: November;
    -moz-scroll-snap-padding-block-start: November;
    -ms-scroll-snap-padding-block-start: November;
    scroll-snap-padding-block-start: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-block-start: January;
    -moz-scroll-snap-padding-block-start: January;
    -ms-scroll-snap-padding-block-start: January;
    scroll-snap-padding-block-start: January;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-block-start: December;
    -moz-scroll-snap-padding-block-start: December;
    -ms-scroll-snap-padding-block-start: December;
    scroll-snap-padding-block-start: December;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-block-start: April;
    -moz-scroll-snap-padding-block-start: April;
    -ms-scroll-snap-padding-block-start: April;
    scroll-snap-padding-block-start: April;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-block-start: May;
    -moz-scroll-snap-padding-block-start: May;
    -ms-scroll-snap-padding-block-start: May;
    scroll-snap-padding-block-start: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingBlockStart renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-snap-padding-block-start: July;
    -moz-scroll-snap-padding-block-start: July;
    -ms-scroll-snap-padding-block-start: July;
    scroll-snap-padding-block-start: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-block-start: August;
    -moz-scroll-snap-padding-block-start: August;
    -ms-scroll-snap-padding-block-start: August;
    scroll-snap-padding-block-start: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-block-start: September;
    -moz-scroll-snap-padding-block-start: September;
    -ms-scroll-snap-padding-block-start: September;
    scroll-snap-padding-block-start: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-block-start: November;
    -moz-scroll-snap-padding-block-start: November;
    -ms-scroll-snap-padding-block-start: November;
    scroll-snap-padding-block-start: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-block-start: August;
    -moz-scroll-snap-padding-block-start: August;
    -ms-scroll-snap-padding-block-start: August;
    scroll-snap-padding-block-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-snap-padding-block-start: July;
    -moz-scroll-snap-padding-block-start: July;
    -ms-scroll-snap-padding-block-start: July;
    scroll-snap-padding-block-start: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-block-start: August;
    -moz-scroll-snap-padding-block-start: August;
    -ms-scroll-snap-padding-block-start: August;
    scroll-snap-padding-block-start: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-block-start: September;
    -moz-scroll-snap-padding-block-start: September;
    -ms-scroll-snap-padding-block-start: September;
    scroll-snap-padding-block-start: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-block-start: November;
    -moz-scroll-snap-padding-block-start: November;
    -ms-scroll-snap-padding-block-start: November;
    scroll-snap-padding-block-start: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-block-start: August;
    -moz-scroll-snap-padding-block-start: August;
    -ms-scroll-snap-padding-block-start: August;
    scroll-snap-padding-block-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-padding-block-start: January;
    -moz-scroll-snap-padding-block-start: January;
    -ms-scroll-snap-padding-block-start: January;
    scroll-snap-padding-block-start: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-block-start: December;
    -moz-scroll-snap-padding-block-start: December;
    -ms-scroll-snap-padding-block-start: December;
    scroll-snap-padding-block-start: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-block-start: April;
    -moz-scroll-snap-padding-block-start: April;
    -ms-scroll-snap-padding-block-start: April;
    scroll-snap-padding-block-start: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-block-start: May;
    -moz-scroll-snap-padding-block-start: May;
    -ms-scroll-snap-padding-block-start: May;
    scroll-snap-padding-block-start: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-block-start: June;
    -moz-scroll-snap-padding-block-start: June;
    -ms-scroll-snap-padding-block-start: June;
    scroll-snap-padding-block-start: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-padding-block-start: January;
    -moz-scroll-snap-padding-block-start: January;
    -ms-scroll-snap-padding-block-start: January;
    scroll-snap-padding-block-start: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-block-start: December;
    -moz-scroll-snap-padding-block-start: December;
    -ms-scroll-snap-padding-block-start: December;
    scroll-snap-padding-block-start: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-block-start: April;
    -moz-scroll-snap-padding-block-start: April;
    -ms-scroll-snap-padding-block-start: April;
    scroll-snap-padding-block-start: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-block-start: May;
    -moz-scroll-snap-padding-block-start: May;
    -ms-scroll-snap-padding-block-start: May;
    scroll-snap-padding-block-start: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-block-start: June;
    -moz-scroll-snap-padding-block-start: June;
    -ms-scroll-snap-padding-block-start: June;
    scroll-snap-padding-block-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingBlockStart renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-block-start: 54881;
  -moz-scroll-snap-padding-block-start: 54881;
  -ms-scroll-snap-padding-block-start: 54881;
  scroll-snap-padding-block-start: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: 54881;
  -moz-scroll-snap-padding-block-start: 54881;
  -ms-scroll-snap-padding-block-start: 54881;
  scroll-snap-padding-block-start: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: 42365;
  -moz-scroll-snap-padding-block-start: 42365;
  -ms-scroll-snap-padding-block-start: 42365;
  scroll-snap-padding-block-start: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: 42365;
  -moz-scroll-snap-padding-block-start: 42365;
  -ms-scroll-snap-padding-block-start: 42365;
  scroll-snap-padding-block-start: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingBlockStart renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-block-start: July;
  -moz-scroll-snap-padding-block-start: July;
  -ms-scroll-snap-padding-block-start: July;
  scroll-snap-padding-block-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: July;
  -moz-scroll-snap-padding-block-start: July;
  -ms-scroll-snap-padding-block-start: July;
  scroll-snap-padding-block-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: June;
  -moz-scroll-snap-padding-block-start: June;
  -ms-scroll-snap-padding-block-start: June;
  scroll-snap-padding-block-start: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: June;
  -moz-scroll-snap-padding-block-start: June;
  -ms-scroll-snap-padding-block-start: June;
  scroll-snap-padding-block-start: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingBlockStart renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`scrollSnapPaddingBlockStart renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-block-start: DarkSlateBlue;
  -moz-scroll-snap-padding-block-start: DarkSlateBlue;
  -ms-scroll-snap-padding-block-start: DarkSlateBlue;
  scroll-snap-padding-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: DarkSlateBlue;
  -moz-scroll-snap-padding-block-start: DarkSlateBlue;
  -ms-scroll-snap-padding-block-start: DarkSlateBlue;
  scroll-snap-padding-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: DarkSlateBlue;
  -moz-scroll-snap-padding-block-start: DarkSlateBlue;
  -ms-scroll-snap-padding-block-start: DarkSlateBlue;
  scroll-snap-padding-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-block-start: DarkSlateBlue;
  -moz-scroll-snap-padding-block-start: DarkSlateBlue;
  -ms-scroll-snap-padding-block-start: DarkSlateBlue;
  scroll-snap-padding-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
